# arcade

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  buddy.sh  flake.nix
.github/workflows/: checks.yml
Arcade/: CMakeLists.txt
Arcade/src/: Arcade.cpp  Arcade.hpp  main.cpp
Arcade/src/internals/: Asset.cpp  Asset.hpp  Entity.cpp  Entity.hpp
Arcade/src/menu/: MainMenu.cpp  MainMenu.hpp
Arcade/src/utils/: KeysToAscii.hpp  ModuleLoader.hpp  SafeDL.hpp  ScoreStorage.hpp
Games/Minesweeper/: CMakeLists.txt
Games/Minesweeper/src/: Game.cpp  Mines.cpp  Minesweeper.cpp  Minesweeper.hpp  initialization.cpp  mainMinesweeper.cpp
Games/Nibbler/: CMakeLists.txt
Games/Nibbler/src/: Nibbler.cpp  Nibbler.hpp
Games/Pacman/: CMakeLists.txt
Games/Pacman/src/: Game.cpp  Ghost.cpp  Pacman.cpp  Pacman.hpp  Player.cpp  initialization.cpp  mainPacman.cpp
Games/Snake/: CMakeLists.txt
Games/Snake/src/: Snake.cpp  Snake.hpp
Renderers/NCURSES/: CMakeLists.txt
Renderers/NCURSES/src/: NCURSESRenderer.cpp  NCURSESRenderer.hpp
Renderers/SDL/: CMakeLists.txt
Renderers/SDL/src/: SDLRenderer.cpp  SDLRenderer.hpp
Renderers/SFML/: CMakeLists.txt
Renderers/SFML/src/: SFMLRenderer.cpp  SFMLRenderer.hpp
Renderers/debug/: CMakeLists.txt
Renderers/debug/src/: DebugRenderer.cpp  DebugRenderer.hpp
